src/parser/y.output
   0  $accept : final $end

   1  final : program main

   2  main : VOID MAIN '(' ')' '{' body '}'

   3  program : program variable_definition
   4          | program function
   5          |

   6  function : built_in_type ID '(' ')' '{' body '}'
   7           | VOID ID '(' ')' '{' body '}'
   8           | built_in_type ID '(' parameter ')' '{' body '}'
   9           | VOID ID '(' parameter ')' '{' body '}'

  10  parameter : parameter ',' built_in_type ID
  11            | built_in_type ID

  12  body : variable_definition_sequence statement_sequence

  13  variable_definition_sequence : variable_definition_sequence variable_definition
  14                               |

  15  variable_definition : built_in_type id_enumeration ';'
  16                      | array_struct id_enumeration ';'

  17  array_struct : array_constructor
  18               | struct_definition

  19  struct_definition : STRUCT '{' struct_body '}'

  20  struct_body : struct_body recordField_definition
  21              |

  22  recordField_definition : built_in_type id_enumeration ';'
  23                         | array_struct id_enumeration ';'

  24  id_enumeration : id_enumeration ',' ID
  25                 | ID

  26  array_constructor : array_constructor '[' INT_CONSTANT ']'
  27                    | built_in_type '[' INT_CONSTANT ']'
  28                    | struct_definition '[' INT_CONSTANT ']'

  29  statement_sequence : statement_sequence statement
  30                     |

  31  statement : if_statement
  32            | WHILE '(' expression ')' if_while_body
  33            | assigment ';'
  34            | WRITE expression_sequence ';'
  35            | READ expression_sequence ';'
  36            | function_invocation ';'
  37            | RETURN expression ';'

  38  if_statement : IF '(' expression ')' if_while_body ELSE if_while_body
  39               | IF '(' expression ')' if_while_body

  40  if_while_body : '{' statement_sequence '}'
  41                | statement

  42  expression_sequence : expression_sequence ',' expression
  43                      | expression

  44  assigment : expression '=' expression

  45  expression : expression '+' expression
  46             | expression '-' expression
  47             | expression '*' expression
  48             | expression '/' expression
  49             | expression '%' expression
  50             | '-' expression
  51             | '!' expression
  52             | expression LTOE expression
  53             | expression GTOE expression
  54             | expression EQUALS expression
  55             | expression NOTEQUALS expression
  56             | expression OR expression
  57             | expression AND expression
  58             | expression '>' expression
  59             | expression '<' expression
  60             | expression '.' ID
  61             | expression '[' expression ']'
  62             | '(' expression ')'
  63             | '(' built_in_type ')' expression
  64             | function_invocation
  65             | CHAR_CONSTANT
  66             | INT_CONSTANT
  67             | REAL_CONSTANT
  68             | ID

  69  function_invocation : ID '(' expression_sequence ')'
  70                      | ID '(' ')'

  71  built_in_type : CHAR
  72                | INT
  73                | DOUBLE

state 0
	$accept : . final $end  (0)
	program : .  (5)

	.  reduce 5

	final  goto 1
	program  goto 2


state 1
	$accept : final . $end  (0)

	$end  accept


state 2
	final : program . main  (1)
	program : program . variable_definition  (3)
	program : program . function  (4)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 6
	STRUCT  shift 7
	.  error

	main  goto 8
	variable_definition  goto 9
	function  goto 10
	built_in_type  goto 11
	array_struct  goto 12
	array_constructor  goto 13
	struct_definition  goto 14


state 3
	built_in_type : INT .  (72)

	.  reduce 72


state 4
	built_in_type : DOUBLE .  (73)

	.  reduce 73


state 5
	built_in_type : CHAR .  (71)

	.  reduce 71


state 6
	main : VOID . MAIN '(' ')' '{' body '}'  (2)
	function : VOID . ID '(' ')' '{' body '}'  (7)
	function : VOID . ID '(' parameter ')' '{' body '}'  (9)

	ID  shift 15
	MAIN  shift 16
	.  error


state 7
	struct_definition : STRUCT . '{' struct_body '}'  (19)

	'{'  shift 17
	.  error


state 8
	final : program main .  (1)

	.  reduce 1


state 9
	program : program variable_definition .  (3)

	.  reduce 3


state 10
	program : program function .  (4)

	.  reduce 4


state 11
	function : built_in_type . ID '(' ')' '{' body '}'  (6)
	function : built_in_type . ID '(' parameter ')' '{' body '}'  (8)
	variable_definition : built_in_type . id_enumeration ';'  (15)
	array_constructor : built_in_type . '[' INT_CONSTANT ']'  (27)

	ID  shift 18
	'['  shift 19
	.  error

	id_enumeration  goto 20


state 12
	variable_definition : array_struct . id_enumeration ';'  (16)

	ID  shift 21
	.  error

	id_enumeration  goto 22


state 13
	array_struct : array_constructor .  (17)
	array_constructor : array_constructor . '[' INT_CONSTANT ']'  (26)

	'['  shift 23
	ID  reduce 17


state 14
	array_struct : struct_definition .  (18)
	array_constructor : struct_definition . '[' INT_CONSTANT ']'  (28)

	'['  shift 24
	ID  reduce 18


state 15
	function : VOID ID . '(' ')' '{' body '}'  (7)
	function : VOID ID . '(' parameter ')' '{' body '}'  (9)

	'('  shift 25
	.  error


state 16
	main : VOID MAIN . '(' ')' '{' body '}'  (2)

	'('  shift 26
	.  error


state 17
	struct_definition : STRUCT '{' . struct_body '}'  (19)
	struct_body : .  (21)

	.  reduce 21

	struct_body  goto 27


state 18
	function : built_in_type ID . '(' ')' '{' body '}'  (6)
	function : built_in_type ID . '(' parameter ')' '{' body '}'  (8)
	id_enumeration : ID .  (25)

	'('  shift 28
	','  reduce 25
	';'  reduce 25


state 19
	array_constructor : built_in_type '[' . INT_CONSTANT ']'  (27)

	INT_CONSTANT  shift 29
	.  error


state 20
	variable_definition : built_in_type id_enumeration . ';'  (15)
	id_enumeration : id_enumeration . ',' ID  (24)

	','  shift 30
	';'  shift 31
	.  error


state 21
	id_enumeration : ID .  (25)

	.  reduce 25


state 22
	variable_definition : array_struct id_enumeration . ';'  (16)
	id_enumeration : id_enumeration . ',' ID  (24)

	','  shift 30
	';'  shift 32
	.  error


state 23
	array_constructor : array_constructor '[' . INT_CONSTANT ']'  (26)

	INT_CONSTANT  shift 33
	.  error


state 24
	array_constructor : struct_definition '[' . INT_CONSTANT ']'  (28)

	INT_CONSTANT  shift 34
	.  error


state 25
	function : VOID ID '(' . ')' '{' body '}'  (7)
	function : VOID ID '(' . parameter ')' '{' body '}'  (9)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  shift 35
	.  error

	built_in_type  goto 36
	parameter  goto 37


state 26
	main : VOID MAIN '(' . ')' '{' body '}'  (2)

	')'  shift 38
	.  error


state 27
	struct_definition : STRUCT '{' struct_body . '}'  (19)
	struct_body : struct_body . recordField_definition  (20)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 7
	'}'  shift 39
	.  error

	built_in_type  goto 40
	array_struct  goto 41
	array_constructor  goto 13
	struct_definition  goto 14
	recordField_definition  goto 42


state 28
	function : built_in_type ID '(' . ')' '{' body '}'  (6)
	function : built_in_type ID '(' . parameter ')' '{' body '}'  (8)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  shift 43
	.  error

	built_in_type  goto 36
	parameter  goto 44


state 29
	array_constructor : built_in_type '[' INT_CONSTANT . ']'  (27)

	']'  shift 45
	.  error


state 30
	id_enumeration : id_enumeration ',' . ID  (24)

	ID  shift 46
	.  error


state 31
	variable_definition : built_in_type id_enumeration ';' .  (15)

	.  reduce 15


state 32
	variable_definition : array_struct id_enumeration ';' .  (16)

	.  reduce 16


state 33
	array_constructor : array_constructor '[' INT_CONSTANT . ']'  (26)

	']'  shift 47
	.  error


state 34
	array_constructor : struct_definition '[' INT_CONSTANT . ']'  (28)

	']'  shift 48
	.  error


state 35
	function : VOID ID '(' ')' . '{' body '}'  (7)

	'{'  shift 49
	.  error


state 36
	parameter : built_in_type . ID  (11)

	ID  shift 50
	.  error


state 37
	function : VOID ID '(' parameter . ')' '{' body '}'  (9)
	parameter : parameter . ',' built_in_type ID  (10)

	')'  shift 51
	','  shift 52
	.  error


state 38
	main : VOID MAIN '(' ')' . '{' body '}'  (2)

	'{'  shift 53
	.  error


state 39
	struct_definition : STRUCT '{' struct_body '}' .  (19)

	.  reduce 19


state 40
	recordField_definition : built_in_type . id_enumeration ';'  (22)
	array_constructor : built_in_type . '[' INT_CONSTANT ']'  (27)

	ID  shift 21
	'['  shift 19
	.  error

	id_enumeration  goto 54


state 41
	recordField_definition : array_struct . id_enumeration ';'  (23)

	ID  shift 21
	.  error

	id_enumeration  goto 55


state 42
	struct_body : struct_body recordField_definition .  (20)

	.  reduce 20


state 43
	function : built_in_type ID '(' ')' . '{' body '}'  (6)

	'{'  shift 56
	.  error


state 44
	function : built_in_type ID '(' parameter . ')' '{' body '}'  (8)
	parameter : parameter . ',' built_in_type ID  (10)

	')'  shift 57
	','  shift 52
	.  error


state 45
	array_constructor : built_in_type '[' INT_CONSTANT ']' .  (27)

	.  reduce 27


state 46
	id_enumeration : id_enumeration ',' ID .  (24)

	.  reduce 24


state 47
	array_constructor : array_constructor '[' INT_CONSTANT ']' .  (26)

	.  reduce 26


state 48
	array_constructor : struct_definition '[' INT_CONSTANT ']' .  (28)

	.  reduce 28


state 49
	function : VOID ID '(' ')' '{' . body '}'  (7)
	variable_definition_sequence : .  (14)

	.  reduce 14

	body  goto 58
	variable_definition_sequence  goto 59


state 50
	parameter : built_in_type ID .  (11)

	.  reduce 11


state 51
	function : VOID ID '(' parameter ')' . '{' body '}'  (9)

	'{'  shift 60
	.  error


state 52
	parameter : parameter ',' . built_in_type ID  (10)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	built_in_type  goto 61


state 53
	main : VOID MAIN '(' ')' '{' . body '}'  (2)
	variable_definition_sequence : .  (14)

	.  reduce 14

	body  goto 62
	variable_definition_sequence  goto 59


state 54
	recordField_definition : built_in_type id_enumeration . ';'  (22)
	id_enumeration : id_enumeration . ',' ID  (24)

	','  shift 30
	';'  shift 63
	.  error


state 55
	recordField_definition : array_struct id_enumeration . ';'  (23)
	id_enumeration : id_enumeration . ',' ID  (24)

	','  shift 30
	';'  shift 64
	.  error


state 56
	function : built_in_type ID '(' ')' '{' . body '}'  (6)
	variable_definition_sequence : .  (14)

	.  reduce 14

	body  goto 65
	variable_definition_sequence  goto 59


state 57
	function : built_in_type ID '(' parameter ')' . '{' body '}'  (8)

	'{'  shift 66
	.  error


state 58
	function : VOID ID '(' ')' '{' body . '}'  (7)

	'}'  shift 67
	.  error


state 59
	body : variable_definition_sequence . statement_sequence  (12)
	variable_definition_sequence : variable_definition_sequence . variable_definition  (13)
	statement_sequence : .  (30)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 7
	INT_CONSTANT  reduce 30
	CHAR_CONSTANT  reduce 30
	REAL_CONSTANT  reduce 30
	ID  reduce 30
	RETURN  reduce 30
	IF  reduce 30
	WHILE  reduce 30
	READ  reduce 30
	WRITE  reduce 30
	'!'  reduce 30
	'-'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	variable_definition  goto 68
	built_in_type  goto 69
	statement_sequence  goto 70
	array_struct  goto 12
	array_constructor  goto 13
	struct_definition  goto 14


state 60
	function : VOID ID '(' parameter ')' '{' . body '}'  (9)
	variable_definition_sequence : .  (14)

	.  reduce 14

	body  goto 71
	variable_definition_sequence  goto 59


state 61
	parameter : parameter ',' built_in_type . ID  (10)

	ID  shift 72
	.  error


state 62
	main : VOID MAIN '(' ')' '{' body . '}'  (2)

	'}'  shift 73
	.  error


state 63
	recordField_definition : built_in_type id_enumeration ';' .  (22)

	.  reduce 22


state 64
	recordField_definition : array_struct id_enumeration ';' .  (23)

	.  reduce 23


state 65
	function : built_in_type ID '(' ')' '{' body . '}'  (6)

	'}'  shift 74
	.  error


state 66
	function : built_in_type ID '(' parameter ')' '{' . body '}'  (8)
	variable_definition_sequence : .  (14)

	.  reduce 14

	body  goto 75
	variable_definition_sequence  goto 59


state 67
	function : VOID ID '(' ')' '{' body '}' .  (7)

	.  reduce 7


state 68
	variable_definition_sequence : variable_definition_sequence variable_definition .  (13)

	.  reduce 13


state 69
	variable_definition : built_in_type . id_enumeration ';'  (15)
	array_constructor : built_in_type . '[' INT_CONSTANT ']'  (27)

	ID  shift 21
	'['  shift 19
	.  error

	id_enumeration  goto 20


state 70
	body : variable_definition_sequence statement_sequence .  (12)
	statement_sequence : statement_sequence . statement  (29)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	RETURN  shift 80
	IF  shift 81
	WHILE  shift 82
	READ  shift 83
	WRITE  shift 84
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	'}'  reduce 12

	statement  goto 88
	if_statement  goto 89
	expression  goto 90
	assigment  goto 91
	function_invocation  goto 92


state 71
	function : VOID ID '(' parameter ')' '{' body . '}'  (9)

	'}'  shift 93
	.  error


state 72
	parameter : parameter ',' built_in_type ID .  (10)

	.  reduce 10


state 73
	main : VOID MAIN '(' ')' '{' body '}' .  (2)

	.  reduce 2


state 74
	function : built_in_type ID '(' ')' '{' body '}' .  (6)

	.  reduce 6


state 75
	function : built_in_type ID '(' parameter ')' '{' body . '}'  (8)

	'}'  shift 94
	.  error


state 76
	expression : INT_CONSTANT .  (66)

	.  reduce 66


state 77
	expression : CHAR_CONSTANT .  (65)

	.  reduce 65


state 78
	expression : REAL_CONSTANT .  (67)

	.  reduce 67


state 79
	expression : ID .  (68)
	function_invocation : ID . '(' expression_sequence ')'  (69)
	function_invocation : ID . '(' ')'  (70)

	'('  shift 95
	AND  reduce 68
	OR  reduce 68
	EQUALS  reduce 68
	LTOE  reduce 68
	GTOE  reduce 68
	NOTEQUALS  reduce 68
	'='  reduce 68
	'>'  reduce 68
	'<'  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	'['  reduce 68
	']'  reduce 68
	'.'  reduce 68
	')'  reduce 68
	','  reduce 68
	';'  reduce 68


state 80
	statement : RETURN . expression ';'  (37)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	expression  goto 96
	function_invocation  goto 97


state 81
	if_statement : IF . '(' expression ')' if_while_body ELSE if_while_body  (38)
	if_statement : IF . '(' expression ')' if_while_body  (39)

	'('  shift 98
	.  error


state 82
	statement : WHILE . '(' expression ')' if_while_body  (32)

	'('  shift 99
	.  error


state 83
	statement : READ . expression_sequence ';'  (35)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	expression  goto 100
	expression_sequence  goto 101
	function_invocation  goto 97


state 84
	statement : WRITE . expression_sequence ';'  (34)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	expression  goto 100
	expression_sequence  goto 102
	function_invocation  goto 97


state 85
	expression : '!' . expression  (51)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	expression  goto 103
	function_invocation  goto 97


state 86
	expression : '-' . expression  (50)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	expression  goto 104
	function_invocation  goto 97


state 87
	expression : '(' . expression ')'  (62)
	expression : '(' . built_in_type ')' expression  (63)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	.  error

	built_in_type  goto 105
	expression  goto 106
	function_invocation  goto 97


state 88
	statement_sequence : statement_sequence statement .  (29)

	.  reduce 29


state 89
	statement : if_statement .  (31)

	.  reduce 31


state 90
	assigment : expression . '=' expression  (44)
	expression : expression . '+' expression  (45)
	expression : expression . '-' expression  (46)
	expression : expression . '*' expression  (47)
	expression : expression . '/' expression  (48)
	expression : expression . '%' expression  (49)
	expression : expression . LTOE expression  (52)
	expression : expression . GTOE expression  (53)
	expression : expression . EQUALS expression  (54)
	expression : expression . NOTEQUALS expression  (55)
	expression : expression . OR expression  (56)
	expression : expression . AND expression  (57)
	expression : expression . '>' expression  (58)
	expression : expression . '<' expression  (59)
	expression : expression . '.' ID  (60)
	expression : expression . '[' expression ']'  (61)

	AND  shift 107
	OR  shift 108
	EQUALS  shift 109
	LTOE  shift 110
	GTOE  shift 111
	NOTEQUALS  shift 112
	'='  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'['  shift 121
	'.'  shift 122
	.  error


state 91
	statement : assigment . ';'  (33)

	';'  shift 123
	.  error


state 92
	statement : function_invocation . ';'  (36)
	expression : function_invocation .  (64)

	';'  shift 124
	AND  reduce 64
	OR  reduce 64
	EQUALS  reduce 64
	LTOE  reduce 64
	GTOE  reduce 64
	NOTEQUALS  reduce 64
	'='  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	'['  reduce 64
	'.'  reduce 64


state 93
	function : VOID ID '(' parameter ')' '{' body '}' .  (9)

	.  reduce 9


state 94
	function : built_in_type ID '(' parameter ')' '{' body '}' .  (8)

	.  reduce 8


state 95
	function_invocation : ID '(' . expression_sequence ')'  (69)
	function_invocation : ID '(' . ')'  (70)

	INT_CONSTANT  shift 76
	CHAR_CONSTANT  shift 77
	REAL_CONSTANT  shift 78
	ID  shift 79
	'!'  shift 85
	'-'  shift 86
	'('  shift 87
	')'  shift 125
	.  error

	expression  goto 100
	expression_sequence  goto 126
	function_invocation  goto 97

